2003-09-10  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_init): hook onto realise so we
	get the real theme-applied style.
	(efhd_gtkhtml_realise): get the theme data for colour defaults.
	Tweak the colour selection to make it work better with dark
	themes.

	* em-format-quote.c (emfq_format_source): we need to implement
	this.
	(emfq_format_error): we need not to call parent, it doesn't
	implement it.

	* message-list.c (message_list_select_uid): don't emit
	changedhere, let it go through the table cursor change.

	* em-folder-browser.c (em_folder_browser_show_preview): use
	folderview.preview_active for this state.
	(em_folder_browser_show_preview): clear the current message when
	we turn off the message view, and load the current one when turn it on.

	* em-folder-view.c (emfv_destroy): zero out preview + list.
	(emfv_list_message_selected): check preview_active before doing
	anything.
	(emfv_edit_cut):
	(emfv_edit_copy): only run if preview active.

	* em-format-html.c (efh_format_do): output the proper html
	headers, etc.

2003-09-10  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-account-gui.c (mail_account_gui_save): Allow the user to
	select any fodler for his/her Drafts and Sent folders. Fixes bug
	#45412.

2003-09-09  Not Zed  <NotZed@Ximian.com>

	* em-utils.c (forward_non_attached): implement forward quoted.

	* em-format-quote.[ch]: New class, em-format-html-quote wont cut
	it.  Sigh.

	* em-format-html-quote.c (efhq_base_init): move type init stuff
	here.
	(efhq_complete): remove, this is a signal.
	(efhq_multipart_related): we need to override the base class, we
	don't want to output any attachment html.

	* em-format-html-print.c (efhp_base_init): move builtin type init
	to here.

	* em-format-html.c (efh_init): get xmailer mask from gconf (sigh).
	(efh_format_header): inmplement most of xmailer mask thing.
	rupert icon not done yet, probably needs to be done as part of
	em-format-html-display, sigh.